tests/assert_operator_disabled_but_parsed/assert_operator_disabled_but_parsed.exp
Error ------------------------------------------------------------------------------------------------- chain_lhs.js:3:5

Invalid left-hand side in assignment

   3|     c?.x!.y = 42;
          ^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:3:3

Flow doesn't support non-null assertions (the postfix `!` operator). [unsupported-syntax]

   3|   a!
        ^^


Error ------------------------------------------------------------------------------------------------------ test.js:4:3

Flow doesn't support non-null assertions (the postfix `!` operator). [unsupported-syntax]

   4|   a! = 42;
        ^^


Error ------------------------------------------------------------------------------------------------------ test.js:5:3

Flow doesn't support non-null assertions (the postfix `!` operator). [unsupported-syntax]

   5|   a! += 42;
        ^^


Error ------------------------------------------------------------------------------------------------------ test.js:7:3

Flow doesn't support non-null assertions (the postfix `!` operator). [unsupported-syntax]

   7|   b.x!
        ^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:8:3

Flow doesn't support non-null assertions (the postfix `!` operator). [unsupported-syntax]

   8|   b.x! = 42;
        ^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:9:3

Flow doesn't support non-null assertions (the postfix `!` operator). [unsupported-syntax]

   9|   b.x! += 42;
        ^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:11:3

Flow doesn't support non-null assertions (the postfix `!` operator). [unsupported-syntax]

   11|   c?.x!.y;
         ^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:12:3

Flow doesn't support non-null assertions (the postfix `!` operator). [unsupported-syntax]

   12|   c?.x!['y'];
         ^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:13:10

Flow doesn't support non-null assertions (the postfix `!` operator). [unsupported-syntax]

   13|   delete c!.x;
                ^^


Error ---------------------------------------------------------------------------------------------------- test.js:13:10

Cannot delete `(c!).x` because undefined [1] is incompatible with object literal [2]. [incompatible-type]

   test.js:13:10
   13|   delete c!.x;
                ^^^^

References:
   test.js:13:3
   13|   delete c!.x;
         ^^^^^^^^^^^ [1]
   test.js:10:16
   10|   let c = { x: {y : 20} }
                      ^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:15:3

Flow doesn't support non-null assertions (the postfix `!` operator). [unsupported-syntax]

   15|   d?.x!.y!();
         ^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:15:3

Flow doesn't support non-null assertions (the postfix `!` operator). [unsupported-syntax]

   15|   d?.x!.y!();
         ^^^^^^^^^^



Found 13 errors
